[metadata]
name = yelpreview
version = 1.0
author = JoshuaPhuongLe
author_email = phuonglevu3112@gmail.com
description = Analysis and modelling of Yelp restaurant reviews
long_description = file: README.md
long_description_content_type = text/markdown
url = project_url.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt


[options]
packages = find:

[options.packages.find]
include = yelpreview
